Add comprehensive README.md with setup and usage instructions